# celery_template_worker

./: Dockerfile  README.md  app.py  pyproject.toml
