[tool.poetry]
name = "celery_1"
version = "0.1.0"
description = ""
authors = ["Weber <ychuang@eland.com.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.3.4"
celery = {extras = ["redis"], version = "^5.2.7"}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
